feat: [CDS-80753]: add junits (#54057)
* feat: [CDS-80753]: add junits

* feat: [CDS-80753]: add junits

* feat:[CDS-80753]: fix ut

* feat:[CDS-80753]: fix ut